# ChainDeploy

./: .env  .env.chaindemo  .env.example  .gitignore  README.md  docker-compose.yml  example-workflow.yml
backend/: .env  .env.generated  approval_expiry.py  config.py  db.py  deployment_router.py  deployment_schemas.py  github_service.py  history_cache.py  main.py  models.py  requirements.txt  schemas.py  stellar_service.py
contracts/: Cargo.toml
contracts/deployment_decision/: Cargo.toml
contracts/deployment_decision/src/: lib.rs
contracts/deployment_decision/test_snapshots/tests/: evaluate_all_pass_approves.1.json  evaluate_error_rate_fails.1.json  evaluate_low_coverage_rejects_and_requests_multisig.1.json  evaluate_performance_fails.1.json  evaluate_security_fails.1.json  get_team_approvers_empty_by_default.1.json  init_sets_admin.1.json  set_team_approvers_requires_auth.1.json
contracts/multisig_approval/: Cargo.toml
contracts/multisig_approval/src/: lib.rs
contracts/multisig_approval/test_snapshots/tests/: approve_not_in_list_fails.1.json  approve_reaches_threshold.1.json  create_session_duplicate_fails.1.json  create_session_stores_state.1.json  expiry_blocks_approval.1.json  finalize_expiry_emits.1.json
contracts/rollback_engine/: Cargo.toml
contracts/rollback_engine/src/: lib.rs
contracts/rollback_engine/test_snapshots/tests/: auto_rollback_on_crashes.1.json  auto_rollback_on_error_rate.1.json  auto_rollback_on_latency.1.json  double_rollback_fails.1.json  manual_rollback_always.1.json
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
github-action/: main.py  (+3 more)
(+50 files in other folders)
