[package]
name = "deployment_decision"
version = "0.1.0"
edition = "2021"
publish = false
description = "ChainDeploy — autonomous deployment scorecard approval / rejection."

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
