[package]
name = "rollback_engine"
version = "0.1.0"
edition = "2021"
publish = false
description = "ChainDeploy — automatic and manual rollback orchestration."

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
